@@ -1,3 +1,8 @@
+2003-03-21  Daniel Jacobowitz  <drow@mvista.com>
+
+	* sysdeps/unix/sysv/linux/arm/sysdep-cancel.h
+	(SINGLE_THREAD_P_PIC): Use "reg" instead of "lr".
+
 2003-03-21  Jakub Jelinek  <jakub@redhat.com>
 
 	* sysdeps/i386/tls.h [__ASSUME_SET_THREAD_AREA_SYSCALL]
